# visa-pam

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSSL.cmake
src/: pam_visa.c
src/lib/: validation.c  validation.h
tests/: CMakeLists.txt  pam_visa_test.c
